--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.4",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.26"
   }
 }
