--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "styled-components": "^5.3.6",
-    "typescript": "4.9.5"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "typescript": "4.9.5",
     "@types/react-date-range": "^1.4.4",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.26"
